--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "fs-extra": "^7.0.1",
-    "globby": "^7.1.1",
+    "globby": "^8.0.1",
     "lodash.template": "^4.4.0",
     "minimist": "^1.2.0",
     "multer": "^1.4.1",
@@ -40,6 +40,8 @@
       "node",
       "jest"
     ],
-    "ignores": ["test/**/*"]
+    "ignores": [
+      "test/**/*"
+    ]
   }
 }
