--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.16.4",
     "fs-extra": "^7.0.1",
     "globby": "^8.0.1",
+    "import-fresh": "^2.0.0",
     "lodash.template": "^4.4.0",
     "minimist": "^1.2.0",
     "morgan": "^1.9.1",
