--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "scripts": {
     "lint": "xo",
     "lint:fix": "xo --fix",
-    "start": "smoke test",
-    "test": "smoke test",
+    "start": "smoke test/mocks",
+    "test": "smoke test/mocks",
     "postpublish": "git tag -a $npm_package_version -m \"$npm_package_version\" && git push --tags"
   },
   "keywords": [
@@ -18,6 +18,7 @@
     "server",
     "api",
     "file",
+    "file-based",
     "json",
     "rest"
   ],
@@ -49,5 +50,8 @@
     "ignores": [
       "test/**/*"
     ]
+  },
+  "engines": {
+    "node": ">=8.0.0"
   }
 }
