--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "express-http-proxy": "^1.5.0",
     "fs-extra": "^7.0.1",
     "globby": "^8.0.1",
     "import-fresh": "^2.0.0",
     "lodash.template": "^4.4.0",
+    "mime-types": "^2.1.21",
     "minimist": "^1.2.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
