--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "smoke",
-  "version": "1.0.0",
-  "description": "Simple yet powerful file-based mock server",
+  "version": "1.1.0",
+  "description": "Simple yet powerful file-based mock server with recording abilities",
   "main": "smoke.js",
   "bin": {
     "smoke": "./bin/smoke"
