--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "path-to-regexp": "^3.0.0"
   },
   "devDependencies": {
-    "jest": "^23.6.0",
-    "supertest": "^3.4.1",
+    "jest": "^24.1.0",
+    "supertest": "^3.4.2",
     "xo": "^0.24.0"
   },
   "xo": {
@@ -63,6 +63,10 @@
     ],
     "silent": true,
     "verbose": true
+  },
+  "prettier": {
+    "singleQuote": true,
+    "bracketSpacing": false
   },
   "engines": {
     "node": ">=8.0.0"
