--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,7 @@
 # Node.js
 # Build a general Node.js project with npm.
 # Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
+# https://docs.microsoft.com/azure/devops/pipelines/languages/javascript&WT.mc_id=sinediedsmoke-github-yolasors
 
 strategy:
   matrix:
@@ -30,10 +30,18 @@ pool:
 trigger:
 - master
 
+schedules:
+- cron: "0 12 * * 1"
+  always: true
+  branches:
+    include:
+    - master
+  displayName: Weekly monday build
+
 steps:
   # Needed to avoid issues with Prettier & Jest snapshots
 - script: git config --global core.autocrlf false
-  displayName: 'Disable git automatic line ending conversion'
+  displayName: Disable git automatic line ending conversion
 
 - checkout: self
   fetchDepth: 1
@@ -41,10 +49,10 @@ steps:
 - task: NodeTool@0
   inputs:
     versionSpec: $(nodeVersion)
-  displayName: 'Install Node.js'
+  displayName: Install Node.js
 
 - script: npm install
-  displayName: 'Install dependencies'
+  displayName: Install dependencies
 
 - script: npm test
-  displayName: 'Run unit tests'
+  displayName: Run unit tests
