--- a/package.json
+++ b/package.json
@@ -40,21 +40,21 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "express-http-proxy": "^1.5.1",
-    "fs-extra": "^8.0.1",
-    "globby": "^10.0.1",
-    "import-fresh": "^3.0.0",
-    "lodash.template": "^4.4.0",
-    "mime-types": "^2.1.24",
-    "minimist": "^1.2.0",
-    "morgan": "^1.9.1",
-    "multer": "^1.4.1",
-    "path-to-regexp": "^3.0.0"
+    "express-http-proxy": "^1.6.0",
+    "fs-extra": "^9.0.1",
+    "globby": "^11.0.1",
+    "import-fresh": "^3.2.1",
+    "lodash.template": "^4.5.0",
+    "mime-types": "^2.1.27",
+    "minimist": "^1.2.5",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "path-to-regexp": "^3.2.0"
   },
   "devDependencies": {
-    "jest": "^24.8.0",
+    "jest": "^26.1.0",
     "supertest": "^4.0.2",
-    "xo": "^0.24.0"
+    "xo": "^0.32.0"
   },
   "xo": {
     "space": true,
@@ -65,7 +65,12 @@
     ],
     "ignores": [
       "test/mocks/**/*"
-    ]
+    ],
+    "rules": {
+      "unicorn/prevent-abbreviations": "off",
+      "unicorn/no-reduce": "off",
+      "unicorn/no-fn-reference-in-iterator": "off"
+    }
   },
   "jest": {
     "collectCoverageFrom": [
@@ -80,6 +85,6 @@
     "bracketSpacing": false
   },
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=10.0.0"
   }
 }
