--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "2.8.5",
     "express": "^4.17.1",
     "express-http-proxy": "^1.6.0",
     "fs-extra": "^9.0.1",
