--- a/package.json
+++ b/package.json
@@ -86,5 +86,12 @@
   },
   "engines": {
     "node": ">=10.0.0"
-  }
+  },
+  "files": [
+    "smoke-cli.js",
+    "smoke-conv-cli.js",
+    "bin",
+    "lib",
+    "test/hooks.js"
+  ]
 }
