--- a/package.json
+++ b/package.json
@@ -41,23 +41,23 @@
     "body-parser": "^1.19.0",
     "cors": "2.8.5",
     "express": "^4.17.1",
-    "express-http-proxy": "^1.6.2",
-    "fs-extra": "^9.0.1",
-    "globby": "^11.0.1",
+    "express-http-proxy": "^2.1.1",
+    "fs-extra": "^11.2.0",
+    "globby": "^14.0.2",
     "import-fresh": "^3.2.1",
     "lodash.template": "^4.5.0",
     "mime-types": "^2.1.27",
     "minimist": "^1.2.5",
     "morgan": "^1.10.0",
-    "multer": "^1.4.2",
-    "path-to-regexp": "^6.1.0"
+    "multer": "^1.4.5-lts.1",
+    "path-to-regexp": "^8.2.0"
   },
   "devDependencies": {
-    "jest": "^26.4.2",
-    "semantic-release": "^17.3.1",
-    "semantic-release-npm-github": "^1.0.4",
-    "supertest": "^6.0.1",
-    "xo": "^0.37.1"
+    "jest": "^29.7.0",
+    "semantic-release": "^24.2.0",
+    "semantic-release-npm-github": "^5.0.0",
+    "supertest": "^7.0.0",
+    "xo": "^0.60.0"
   },
   "xo": {
     "space": true,
@@ -91,7 +91,7 @@
     "branches": "main"
   },
   "engines": {
-    "node": ">=10.0.0"
+    "node": ">=18.0.0"
   },
   "files": [
     "smoke-cli.js",
