--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "smoke",
   "version": "3.1.1",
   "description": "Simple yet powerful file-based mock server with recording abilities",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/sinedied/smoke.git"
   },
-  "main": "lib/smoke.js",
+  "exports": "./lib/smoke.js",
   "bin": {
     "smoke": "./bin/smoke",
     "smoke-conv": "./bin/smoke-conv"
@@ -14,8 +15,9 @@
   "scripts": {
     "lint": "xo",
     "lint:fix": "xo --fix",
-    "start": "smoke test/mocks",
-    "test": "xo && jest",
+    "start": "npx smoke test/mocks",
+    "test": "xo && npm run -s test:unit",
+    "test:unit": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "release:check": "semantic-release --dry-run"
   },
   "keywords": [
@@ -42,9 +44,7 @@
     "cors": "2.8.5",
     "express": "^4.17.1",
     "express-http-proxy": "^2.1.1",
-    "fs-extra": "^11.2.0",
-    "globby": "^14.0.2",
-    "import-fresh": "^3.2.1",
+    "globby": "^11.1.0",
     "lodash.template": "^4.5.0",
     "mime-types": "^2.1.27",
     "minimist": "^1.2.5",
@@ -53,7 +53,7 @@
     "path-to-regexp": "^8.2.0"
   },
   "devDependencies": {
-    "jest": "^29.7.0",
+    "jest": "^30.0.0-alpha.6",
     "semantic-release": "^24.2.0",
     "semantic-release-npm-github": "^5.0.0",
     "supertest": "^7.0.0",
@@ -72,11 +72,12 @@
     "rules": {
       "unicorn/prevent-abbreviations": "off",
       "unicorn/no-array-reduce": "off",
-      "unicorn/prefer-module": "off",
-      "unicorn/prefer-spread": "off"
+      "unicorn/prefer-spread": "off",
+      "unicorn/no-await-expression-member": "off"
     }
   },
   "jest": {
+    "transform": {},
     "collectCoverageFrom": [
       "*.js",
       "lib/**/*.js"
