refactor: do not use URL()

--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
       "unicorn/prevent-abbreviations": "off",
       "unicorn/no-array-reduce": "off",
       "unicorn/prefer-spread": "off",
-      "unicorn/no-await-expression-member": "off"
+      "unicorn/no-await-expression-member": "off",
+      "unicorn/import-style": "off"
     }
   },
   "jest": {
