--- a/package.json
+++ b/package.json
@@ -42,10 +42,10 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "2.8.5",
+    "eta": "^3.5.0",
     "express": "^4.17.1",
     "express-http-proxy": "^2.1.1",
     "globby": "^11.1.0",
-    "lodash.template": "^4.5.0",
     "mime-types": "^2.1.27",
     "minimist": "^1.2.5",
     "morgan": "^1.10.0",
