--- a/package.json
+++ b/package.json
@@ -40,16 +40,16 @@
   },
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "body-parser": "^2.2.0",
     "cors": "2.8.5",
     "eta": "^3.5.0",
-    "express": "^4.17.1",
+    "express": "^5.1.0",
     "express-http-proxy": "^2.1.1",
     "globby": "^14.1.0",
     "mime-types": "^3.0.1",
     "minimist": "^1.2.5",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^2.0.1",
     "path-to-regexp": "^8.2.0"
   },
   "devDependencies": {
