--- a/package.json
+++ b/package.json
@@ -53,29 +53,12 @@
     "path-to-regexp": "^8.2.0"
   },
   "devDependencies": {
+    "@jest/globals": "^30.1.2",
     "jest": "^30.0.0-alpha.6",
     "semantic-release": "^24.2.0",
     "semantic-release-npm-github": "^5.0.0",
     "supertest": "^7.0.0",
-    "xo": "^0.60.0"
-  },
-  "xo": {
-    "space": true,
-    "prettier": true,
-    "envs": [
-      "node",
-      "jest"
-    ],
-    "ignores": [
-      "test/mocks/**/*"
-    ],
-    "rules": {
-      "unicorn/prevent-abbreviations": "off",
-      "unicorn/no-array-reduce": "off",
-      "unicorn/prefer-spread": "off",
-      "unicorn/no-await-expression-member": "off",
-      "unicorn/import-style": "off"
-    }
+    "xo": "^1.2.2"
   },
   "jest": {
     "transform": {},
